implement goals fest strategy

--- a/25GoalLines.html
+++ b/25GoalLines.html
@@ -93,6 +93,10 @@
                       class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
                       href="25GoalLines.html" style="padding: 10px;">2,5 Goal Lines</a>
                   </li>
+                  <li class="u-nav-item"><a
+                    class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                    href="Goals-Fest.html" style="padding: 10px;">Goals Fest</a>
+                </li>
                 </ul>
               </div>
             </li>
@@ -129,6 +133,9 @@
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="25GoalLines.html"
                           style="padding: 10px 20px;">2,5 Goal Lines</a>
                       </li>
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Goals-Fest.html"
+                        style="padding: 10px 20px;">Goals Fest</a>
+                    </li>
                     </ul>
                   </div>
                 </li>
