--- a/index.html
+++ b/index.html
@@ -62,37 +62,41 @@
                 href="index.html" style="padding: 10px;">Home</a>
             </li>
             <li class="u-nav-item"><a
-              class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-              style="padding: 10px;color: black !important;">Strategies 🠻</a>
-            <div class="u-nav-popup">
-              <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10">
-                <li class="u-nav-item"><a
-                  class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                  href="Only-Draws.html" style="padding: 10px;">Only Draws</a>
-              </li>
-              <li class="u-nav-item"><a
-                  class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                  href="Margin-Wins.html" style="padding: 10px;">Margin Wins</a>
-              </li>
-              <li class="u-nav-item"><a
-                  class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                  href="Draws-Hunter.html" style="padding: 10px;">Draws Hunter</a>
-              </li>
-              <li class="u-nav-item"><a
                 class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                href="25GoalLines.html" style="padding: 10px;">2,5 Goal Lines</a>
+                style="padding: 10px;color: black !important;">Strategies 🠻</a>
+              <div class="u-nav-popup">
+                <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10">
+                  <li class="u-nav-item"><a
+                      class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                      href="Only-Draws.html" style="padding: 10px;">Only Draws</a>
+                  </li>
+                  <li class="u-nav-item"><a
+                      class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                      href="Margin-Wins.html" style="padding: 10px;">Margin Wins</a>
+                  </li>
+                  <li class="u-nav-item"><a
+                      class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                      href="Draws-Hunter.html" style="padding: 10px;">Draws Hunter</a>
+                  </li>
+                  <li class="u-nav-item"><a
+                      class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                      href="25GoalLines.html" style="padding: 10px;">2,5 Goal Lines</a>
+                  </li>
+                  <li class="u-nav-item"><a
+                    class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                    href="Goals-Fest.html" style="padding: 10px;">Goals Fest</a>
+                </li>
+                </ul>
+              </div>
             </li>
-              </ul>
-            </div>
-          </li>
             <li class="u-nav-item"><a
                 class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
                 href="Bankrolls.html" style="padding: 10px;">Bankrolls</a>
             </li>
             <li class="u-nav-item"><a
-              class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-              href="HistoricStatsData.html" style="padding: 10px;">Historic Stats</a>
-          </li>
+                class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                href="HistoricStatsData.html" style="padding: 10px;">Historic Stats</a>
+            </li>
           </ul>
         </div>
         <div class="u-nav-container-collapse">
@@ -103,21 +107,24 @@
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html"
                     style="padding: 10px 20px;">Home</a>
                 </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" >Strategies 🠻</a>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link">Strategies 🠻</a>
                   <div class="u-nav-popup">
                     <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10">
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Only-Draws.html"
-                        style="padding: 10px 20px;">Only Draws</a>
+                          style="padding: 10px 20px;">Only Draws</a>
+                      </li>
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Margin-Wins.html"
+                          style="padding: 10px 20px;">Margin Wins</a>
+                      </li>
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Draws-Hunter.html"
+                          style="padding: 10px 20px;">Draws Hunter</a>
+                      </li>
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="25GoalLines.html"
+                          style="padding: 10px 20px;">2,5 Goal Lines</a>
+                      </li>
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Goals-Fest.html"
+                        style="padding: 10px 20px;">Goals Fest</a>
                     </li>
-                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Margin-Wins.html"
-                        style="padding: 10px 20px;">Margin Wins</a>
-                    </li>
-                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Draws-Hunter.html"
-                        style="padding: 10px 20px;">Draws Hunter</a>
-                    </li>
-                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="25GoalLines.html"
-                      style="padding: 10px 20px;">2,5 Goal Lines</a>
-                  </li>
                     </ul>
                   </div>
                 </li>
@@ -125,8 +132,8 @@
                     style="padding: 10px 20px;">Bankrolls</a>
                 </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="HistoricStatsData.html"
-                  style="padding: 10px 20px;">Historic Stats</a>
-              </li>
+                    style="padding: 10px 20px;">Historic Stats</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -172,6 +179,12 @@
             <div class="u-container-layout u-similar-container u-container-layout-1" data-href="25GoalLines.html">
               <a
                 class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">2,5 Goal Lines</a>
+            </div>
+          </div>
+          <div class="u-container-style u-list-item u-repeater-item">
+            <div class="u-container-layout u-similar-container u-container-layout-1" data-href="Goals-Fest.html">
+              <a
+                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">Goals Fest</a>
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item">
